--- a/poseidon-oa/src/main/resources/static/pear/view/common/basic/form.html
+++ b/poseidon-oa/src/main/resources/static/pear/view/common/basic/form.html
@@ -1,19 +1,18 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
-  <title>表单元素</title>
-  <meta name="renderer" content="webkit">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <link rel="stylesheet" href="../../../layuiadmin/layui/css/layui.css" media="all">
-  <link rel="stylesheet" href="../../../layuiadmin/style/admin.css" media="all">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <title>富文本编辑器</title>
+	<link rel="stylesheet" href="../../../component/layui/css/layui.css" />
+	<link rel="stylesheet" href="../../../admin/css/pearForm.css" />
+  <style>
+    body{margin: 10px;
+	background-color: whitesmoke;}
+  </style>
 </head>
 <body>
-
-  <div class="layui-fluid">
+  <div >
     <div class="layui-row layui-col-space15">
       <div class="layui-col-md6">
         <div class="layui-card">
@@ -23,13 +22,29 @@
               <input type="text" name="title" placeholder="请输入标题" autocomplete="off" class="layui-input">
             </div>
             <div class="layui-col-md6">
-              <input type="text" name="title" placeholder="用户名" autocomplete="off" class="layui-input">
+              <input type="text" name="title" hover placeholder="用户名" autocomplete="off" class="layui-input">
             </div>
             <div class="layui-col-md6">
-              <input type="password" name="title" placeholder="密码" autocomplete="off" class="layui-input">
+              <input type="password" name="title" hover placeholder="密码" autocomplete="off" class="layui-input">
             </div>
+			
+			<div class="layui-col-md6">
+			  <input type="text" name="title" round placeholder="用户名" autocomplete="off" class="layui-input">
+			</div>
+			<div class="layui-col-md6">
+			  <input type="password" name="title" round placeholder="密码" autocomplete="off" class="layui-input">
+			</div>
+			<div class="layui-col-md6">
+			  <input type="text" name="title" success placeholder="成功" autocomplete="off" class="layui-input">
+			</div>
+			<div class="layui-col-md6">
+			  <input type="text" name="title" failure placeholder="失败" autocomplete="off" class="layui-input">
+			</div>
+	
           </div>
         </div>
+		
+		
         <div class="layui-card layui-form" lay-filter="component-form-element">
           <div class="layui-card-header">下拉选择框</div>
           <div class="layui-card-body layui-row layui-col-space10">
@@ -216,28 +231,31 @@
       </div>
     </div>
   </div>
+ 
+<script src="../../../component/layui/layui.js"></script>
+<script>
 
-  
-  <script src="../../../layuiadmin/layui/layui.js"></script>  
-  <script>
-  layui.config({
-    base: '../../../layuiadmin/' //静态资源所在路径
-  }).extend({
-    index: 'lib/index' //主入口模块
-  }).use(['index', 'form'], function(){
-    var $ = layui.$
-    ,admin = layui.admin
-    ,element = layui.element
-    ,form = layui.form;
-    
-    form.render(null, 'component-form-element');
-    element.render('breadcrumb', 'breadcrumb');
-    
-    form.on('submit(component-form-element)', function(data){
-      layer.msg(JSON.stringify(data.field));
-      return false;
+    layui.use(['util', 'layer','form'], function () {
+        
+
+        var util = layui.util;
+
+        var form = layui.form;
+
+        var edit = tinymce.render({
+            elem: "#edit"
+            , height: 400
+        });
+
+        util.event('lay-event', {
+            getContent: function () {
+                console.log(edit.getContent())
+                layer.msg("展开控制台查看")
+            }
+        });
+
+
     });
-  });
-  </script>
+</script>
 </body>
-</html>
+</html>        
